fix test
Signed-off-by: Pedro Ruivo <1492066+pruivo@users.noreply.github.com>